--- a/flask_project/requirements.txt
+++ b/flask_project/requirements.txt
@@ -1,3 +1,4 @@
+AutoDotEnv==0.1.3
 Bootstrap-Flask==2.3.2
 click==8.1.7
 colorama==0.4.6
@@ -7,6 +8,7 @@ importlib-metadata==6.7.0
 itsdangerous==2.1.2
 Jinja2==3.1.2
 MarkupSafe==2.1.3
+python-dotenv==0.21.1
 typing-extensions==4.7.1
 Werkzeug==2.2.3
 WTForms==3.0.1
